put in activate endpoint.
